Bug 151182 - Calc crash when cut-paste and drag cell
Summary: Calc crash when cut-paste and drag cell
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.3 target:7.4.2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2022-09-26 07:05 UTC by Tyr Antilles
Modified: 2022-10-06 08:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By: Luboš Luňák


Attachments
gdb bt (8.70 KB, text/plain)
2022-09-26 17:38 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyr Antilles 2022-09-26 07:05:10 UTC
Description:
This is a repeatable crash appearing on newer versions of LO (tested with v.7.4.1.2  on Win 10 and Win 7).
A short clip that illustrate the problem can be found here: https://drive.google.com/file/d/1AHtN7pvLVal3ak8XWmtbXiohaZ-plccz/view?usp=sharing

Steps to Reproduce:
1.Open a new Calc file
2.Do not write anything on the table. If you write, the crash won't happen. It can be colored or not.
3.Drag from the handle one cell to cover other cells (see the clip).

Actual Results:
LO crashes.

Expected Results:
To not crash and cover with color the empty cells.


Reproducible: Always


User Profile Reset: No



Additional Info:
See the short clip (under 1 Mb).
Comment 1 Julien Nabet 2022-09-26 17:38:26 UTC
Created attachment 182684 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.

Here's a quicker process to reproduce this:
- launch Calc
- select any cell
- move the cursor at the right bottom of the cell (until seeing a cross instead of a standard mouse pointer)
- click on the cell (when it's the cross)
- move the mouse pointer without "unclicking" to left cell
- unclick when in left cell
Comment 2 Timur 2022-09-27 11:55:12 UTC
7.4: source 9e2d48b9e04f7ea895fb095699c32ed8a44eb129
author	Luboš Luňák <l.lunak@collabora.com>	2022-03-30
reduce Calc's INITIALCOLCOUNT to 1

CC Luboš 
Other bugs with this commit are resolved.
Comment 3 Rainer Bielefeld Retired 2022-09-29 04:44:04 UTC
I had some problems to reproduce the crash because I misunderstood details of the reports, so here more detailed STRbasedon comment 1, because i need this one to provoke Crahes for other tets:

1. Open new Calc Document with LibO 7.4.1.2 or later
2. Click into cell D5, keep left mouse button dragged
3. Move mouse pointer to D6 and back to D5 so that D5 becomes highlighted
4. release left mouse button
5. Move mouse pointer to the fill handle (small dot at the right bottom corner of
   the highlighted cell D5) so that mouse pointer becomes a cross
6. drag left mouse button and keep it dragged while you move mouse pointer
   to middle of C6
   » Cell cursor appears around C5
7. Release left mouse button
   » CRASH
Comment 4 Timur 2022-09-29 07:15:57 UTC
Julien's steps from Comment 1 are very simple.
Comment 5 Commit Notification 2022-09-29 14:20:30 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c53f5b6647dcffa57012990d342b21eaff19888

introduce ScTable::GetColumnData() (tdf#151182)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2022-09-29 15:15:29 UTC
On pc Debian x86-64 with master sources updated today (0103092bf2e25b0f1ad33b1855ea440dfa537f3d), I don't reproduce this anymore.

Thank you Luboš!
Comment 7 Tyr Antilles 2022-09-30 04:52:26 UTC
Thank you very much.   :)
Comment 8 Commit Notification 2022-10-03 08:56:11 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c21ba00a93cd02e322fd28af50af1fb1930bac48

introduce ScTable::GetColumnData() (tdf#151182)

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-10-06 08:15:15 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-2":

https://git.libreoffice.org/core/commit/495444d09dba7af63c0bf87804be02bc3f0f8c17

introduce ScTable::GetColumnData() (tdf#151182)

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.